style(Editor): fix overflow

--- a/packages/data/css/_editor.css
+++ b/packages/data/css/_editor.css
@@ -11,6 +11,7 @@
     & > section {
       direction: ltr;
       grid-area: content;
+      overflow: hidden;
     }
 
     & .monaco-editor .folded-background {
